# blackOut

./: .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  PRODUCT.md  README.md  app.py  pyproject.toml  server.py
.impeccable/live/: config.json
docs/: PRD.md
docs/adr/: 0001-use-streamlit-python-cognee-for-mvp.md  0002-use-nextjs-frontend-with-python-workflow-api.md
docs/agents/: domain.md  issue-tracker.md
frontend/: eslint.config.mjs  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
src/blackout/: __init__.py  bookish_enrichment.py  cognee_adapter.py  seed_demo.py  workflow.py
templates/: index.html
tests/: test_app.py  test_bookish_enrichment.py  test_cognee_adapter.py  test_cognee_smoke.py  test_morning_after_recall.py  test_seed_demo_dataset.py
